Fixed Qian Yang link

--- a/_posts/2020-01-30-Qian-Yang.md
+++ b/_posts/2020-01-30-Qian-Yang.md
@@ -3,7 +3,7 @@ layout: post
 title: "Qian Yang -- Leveraging AI as a Material for User Experience Design"
 ---
 
-{% include youtubePlayer.html yturl="https://youtu.be/Oxgal1rfJss" %}
+{% include youtubePlayer.html yturl="https://www.youtube.com/watch?v=Oxgal1rfJss" %}
 
 ## Bio
 
